# pipeline_dashboard_report_mvp

./: README.md  pyproject.toml
samples/: delivery_report.json  execution_report.json
src/pipeline_dashboard_report/: cli.py  contract.py  reader.py  renderer.py  summary.py
tests/: test_cli.py  test_contract.py  test_dashboard_summary.py  test_reader.py  test_renderer.py  test_summary.py
